--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1> Hello World </h1>
+<!DOCTYPE html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href='https://fonts.googleapis.com/css?family=Lato&subset=latin-ext' rel='stylesheet' type='text/css'>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<link rel="stylesheet" href="main.css">
+<script src="js.js"></script>
+</head>
+
+<body>
+  <div class="blueprint">
+  <h1 style="font-size: 50px; padding: 0 0 30px;">Optotron.eu </h1>
+  <h1>Website under construction</h1>
+  </div>
+</body>
+
+</html>
